Add Apple Silicon Mac support documentation
- Add mac-aarch64 JavaFX dependencies to pom.xml (note: shade plugin
  limitation means only Intel Mac natives are in fat JAR due to
  duplicate filenames)
- Document workaround for Apple Silicon users to use JavaFX SDK
- Add troubleshooting entry for M1/M2/M3 Mac users

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>